syntax = "proto3";

package api.v1;

import "google/protobuf/empty.proto";
import "core/pkg/service/task/pb/task.proto";

option go_package = "github.com/synnaxlabs/synnax/pkg/api/grpc/v1";

service TaskCreateService {
  rpc Exec(TaskCreateRequest) returns (TaskCreateResponse);
}

service TaskRetrieveService {
  rpc Exec(TaskRetrieveRequest) returns (TaskRetrieveResponse);
}

service TaskDeleteService {
  rpc Exec(TaskDeleteRequest) returns (google.protobuf.Empty);
}

service TaskCopyService {
  rpc Exec(TaskCopyRequest) returns (TaskCopyResponse);
}

message TaskCreateRequest {
  repeated service.task.Task tasks = 1;
}

message TaskCreateResponse {
  repeated service.task.Task tasks = 1;
}

message TaskRetrieveRequest {
  uint32 rack = 1;
  repeated uint64 keys = 2;
  repeated string names = 3;
  repeated string types = 4;
  bool include_status = 5;
}

message TaskRetrieveResponse {
  repeated service.task.Task tasks = 1;
}

message TaskDeleteRequest {
  repeated uint64 keys = 1;
}

message TaskCopyRequest {
  uint64 key = 1;
  string name = 2;
  bool snapshot = 3;
}

message TaskCopyResponse {
  service.task.Task task = 1;
}
